force-app/main/default/objects/ssot__GeneratedOperationPlanExecution__dlm/fields/ssot__GeneratedOpPlanExecutionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeneratedOpPlanExecutionStatus__c</fullName>
    <label>Generated Op Plan Execution Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GeneratedOpPlanExecutionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>