force-app/main/default/objects/ssot__GeneratedOperationPlanExecution__dlm/fields/ssot__rel_1723128380496_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128380496_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GeneratedOperationPlanExecution_Gene_rel</label>
    <referenceTo>ssot__GeneratedOperationPlan__dlm</referenceTo>
    <relationshipLabel>GeneratedOperationPlanExecution_Gene_rel</relationshipLabel>
    <relationshipName>rel_1723128380496_end</relationshipName>
    <type>Lookup</type>
</CustomField>